style.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

html { box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* General Styles */

html {
    font-size: 125%;
    color: #fcfcfc;
    font-family: 'Fredericka the Great', sans-serif;
}

h1, h2, h3, p, ul {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}

img {
    max-width: 100%;
    display: block;
}

.wrapper {
    max-width: 1080px; 
    width: 90%;
    margin: 0 auto; 
}

section {
    padding: 100px 0;
}

/* Header Styles */

header {
    background-image: url(./images/image-1.jpg);
    height: 100vh;
    background-size: cover;
    background-position: center;
    padding: 50px 0;
}

.headerFlex {
    display: flex;
}

h1 {
    font-family: 'Fredericka the Great', cursive;
    font-size: 5rem;
    font-weight: 400;
    text-transform: uppercase;
    text-align: center;
    position: absolute;
    padding-right: 120px;
    padding-top: 100px;
    right: 2px;
}


span {
    display: block;
}

/* Navigation Styles */
nav ul {
    display: flex;
}

nav a {
    font-size: 1.2rem;
    text-transform: uppercase;
    padding: 10px 40px;

}

/* Main Styles */

/* About Section */

.about {
    background-color: #152D20;
}

.aboutFlex {
    display: flex;
}

.imgContainer, .textContainer {
    width: 50%;
}

.imgContainer {
    margin-right: 40px;
    margin-bottom: 40px;
    
}

h2 {
    font-size: 2rem;
    font-weight: 400;
    text-transform: uppercase;
}

.textContainer p {
    font-size: 1.2rem;
    font-weight: 200;
    margin: 25px 0;
}

button {
    border: none;
    background-color: #fcfcfc;
    color: #000;
    font-size: 1.2rem;
    text-transform: uppercase;
    text-align: center;
    padding: 20px;
    margin-top: 100px;
}

/* Gallery Section */

.gallery {
    background-color: #C3D3CB;
}

.gallery h2 {
    font-size: 2rem;
    font-weight: 400;
    color: #152D20;
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 50px;
}

.galleryFlex {
    display: flex;
}

.galleryFlex li {
    width: calc((100% - 3) - 20px);
    margin: 0 10px 20px;
}

/* Media Section */

.media {
    background-color: #152D20;
}

.mediaFlex {
    display: flex;
}

h3 {
    text-align: center;
    text-transform: uppercase;
}

/* Footer Styles */

footer {
    text-align: center;
    background-color: #000;
    color:#fcfcfc;
}

footer p {
    padding: 10px 0;
}

@media (max-width: 700px) {
    .wrapper {
        max-width: 700px;
        width: 90%;
        margin: 0 auto;
    }

    h1 {
    font-family: 'Fredericka the Great', cursive;
    font-size: 5rem;
    font-weight: 400;
    text-transform: uppercase;
    text-align: center;
    }

    .aboutFlex {
        display: flex;
        flex-direction: column;
    }

    .imgContainer,
    .textContainer {
        width: 100%;
    }
    
    .imgContainer {
        max-width: 100%;
        height: auto;
    }

    button {
        border: none;
        background-color: #fcfcfc;
        color: #000;
        font-size: 1.2rem;
        text-transform: uppercase;
        text-align: center;
        padding: 20px;
        margin-top: 40px;
        margin-left: 150px;;
    }

    .secondImg {
        visibility: collapse;
    }

    .mediaFlex {
        display: flex;
        flex-direction: column;
    }

    h3 {
        padding-bottom: 20px;;
    }
}

